# prow-jobs-scraper

./: .codecov.yml  .env  .gitignore  Dockerfile  Makefile  OWNERS_ALIASES  README.md  build_deploy.sh  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: docker-image.yml
.tekton/: prow-jobs-scraper-saas-main-pull-request.yaml  prow-jobs-scraper-saas-main-push.yaml
hack/: publish-codecov.sh
hack/es/: .env  README.md  docker-compose.yaml
openshift/: template.yaml
src/elasticsearch_cleanup/: config.py  consts.py  logger.py  main.py  models.py  utils.py
src/jobsautoreport/: config.py  consts.py  main.py  models.py  plot.py  query.py  report.py  slack.py  trends.py  utils.py
src/jobsautoreport/slack/: slack_generate.py  slack_report.py
src/prowjobscraper/: config.py  event.py  main.py  prowjob.py  scraper.py  step.py
src/prowjobscraper/indices/: jobs_schema.json  steps_schema.json
src/prowjobsscraper/: config.py  equinix.py  equinix_metadata.py  equinix_usages.py  event.py  main.py  prowjob.py  scraper.py  step.py  utils.py
src/prowjobsscraper/indices/: usages_schema.json
tests/elasticsearch_cleanup/: test_main.py  test_utils.py
tests/elasticsearch_cleanup/assets/: job_assets.json  step_assets.json
tests/jobsautoreport/: conftest.py  test_report.py  test_slack.py  test_slack_generate.py  test_slack_report.py  test_trends.py
tests/prowjobscraper/: test_event.py  test_prowjob.py  test_scraper.py  test_step.py
tests/prowjobscraper/event_assets/: jobstep.json
tests/prowjobscraper/prowjob_assets/: valid_prow_response.json
tests/prowjobscraper/scraper_assets/: jobstep.json  prowjob.json
tests/prowjobscraper/step_assets/: expected_step2.json  prowjobs.json
tests/prowjobsscraper/: test_equinix.py  test_equinix_metadata.py  test_equinix_usages.py  test_event.py  test_prowjob.py  test_scraper.py  test_step.py
tests/prowjobsscraper/equinix_assets/: equinix-metadata.json  prowjobs.json
tests/prowjobsscraper/event_assets/: expected_step_event.json  jobstep.json
tests/prowjobsscraper/prowjob_assets/: expected_prowjobs.json  valid_prow_response.json
tests/prowjobsscraper/scraper_assets/: jobstep.json  prowjob.json
tests/prowjobsscraper/step_assets/: expected_step1.json  expected_step2.json  expected_step3.json  junit_operator.xml  malformed_time_junit_operator.xml  prowjobs.json
