[build-system]
requires = [
    "setuptools==65.5.1",
    "setuptools_scm[toml]==7.0.5",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "prow-jobs-scraper"
description = "Scrape Prow for job results and export them to elasticsearch"
readme = "README.md"
keywords = ["prow"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "requests==2.28.2",
    "google-cloud-storage==2.7.0",
    "junitparser==2.8.0",
    "pydantic==1.10.4",
    "opensearch-py==2.0.1",
    "slack_sdk==3.19.5",
    "plotly==5.12.0",
    "kaleido==0.2.1",
]
dynamic = ["version"]

[project.scripts]
prow-jobs-scraper = "prowjobsscraper.main:main"
jobs-auto-report = "jobsautoreport.main:main"

[project.optional-dependencies]
test-runner = [
    "tox==4.3.5",
]
unit-tests = [
    "freezegun==1.2.2",
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "pytest-httpserver==1.0.6",
]
coverage = [
    "coverage[toml]==7.0.5",
]
lint = [
    "black==22.12.0",
    "isort==5.11.4",
    "mypy==0.991",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = clean,python3.9,report

[testenv]
usedevelop=True
commands = pytest --cov=src --cov-append --cov-report=term-missing --junitxml=junit-{envname}.xml --junit-prefix={envname} {posargs}
deps = .[unit-tests]
depends =
    {python3.9}: clean
    report: python3.9

[testenv:report]
deps = .[coverage]
skip_install = true
commands =
    coverage report
    coverage html

[testenv:clean]
deps = .[coverage]
skip_install = true
commands = coverage erase
"""
