[build-system]
requires = [
    "setuptools>=74.1.2",
    "setuptools_scm[toml]>=8.1.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "prow-jobs-scraper"
description = "Scrape Prow for job results and export them to elasticsearch"
readme = "README.md"
keywords = ["prow"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "requests==2.32.3",
    "google-cloud-storage==2.18.2",
    "junitparser==3.2.0",
    "pydantic==1.10.18",
    "opensearch-py==2.7.1",
    "slack_sdk==3.33.1",
    "plotly==5.24.1",
    "kaleido==0.2.1",
    "python-dateutil==2.9.0.post0",
    "retry==0.9.2",
    "pandas==2.2.3",
    "numpy==2.1.2",
    "mmh3==5.0.1",
]
dynamic = ["version"]

[project.scripts]
prow-jobs-scraper = "prowjobsscraper.main:main"
jobs-auto-report = "jobsautoreport.main:main"
elasticsearch-cleanup = "elasticsearch_cleanup.main:main"

[project.optional-dependencies]
test-runner = [
    "tox==4.21.2",
]
unit-tests = [
    "freezegun==1.5.1",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-httpserver==1.1.0",
]
coverage = [
    "coverage[toml]==7.6.3",
]
lint = [
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.12.0",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = clean,python3.11,report

[testenv]
usedevelop=True
commands = pytest --cov=src --cov-append --cov-report=term-missing --junitxml=junit-{envname}.xml --junit-prefix={envname} {posargs}
deps = .[unit-tests]
depends =
    {python3.11}: clean
    report: python3.11

[testenv:report]
deps = .[coverage]
skip_install = true
commands =
    coverage report
    coverage html
    coverage xml

[testenv:clean]
deps = .[coverage]
skip_install = true
commands = coverage erase
"""
